added user point and user purchase
