# src/swagger.json
@@ -50,50 +50,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"TagAttributes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"title": {
-						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					}
-				},
-				"required": [
-					"id",
-					"title"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"GetTagResponse": {
-				"properties": {
-					"message": {
-						"type": "string"
-					},
-					"data": {
-						"items": {
-							"$ref": "#/components/schemas/TagAttributes"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"message",
-					"data"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"BookAttributes": {
 				"properties": {
 					"id": {
@@ -138,6 +94,189 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"UserPurchaseBookResponse": {
+				"properties": {
+					"status": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/BookAttributes"
+					}
+				},
+				"required": [
+					"status",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"TokenUserParams": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"username": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"iat": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"exp": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"username",
+					"name",
+					"iat",
+					"exp"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserPurchaseBookParams": {
+				"properties": {
+					"user": {
+						"$ref": "#/components/schemas/TokenUserParams"
+					},
+					"book_id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"user",
+					"book_id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserPointAttributes": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"user_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"point": {
+						"type": "number",
+						"format": "double"
+					},
+					"notes": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"user_id",
+					"point",
+					"notes"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetUserPointsResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/UserPointAttributes"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetLatestPointResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"TagAttributes": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"title": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"title"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetTagResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/TagAttributes"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"GetBookResponse": {
 				"properties": {
 					"totalPage": {
@@ -169,32 +308,6 @@
 					"pageSize",
 					"totalRecord",
 					"books"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"TokenUserParams": {
-				"properties": {
-					"username": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"iat": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"exp": {
-						"type": "string",
-						"format": "date-time"
-					}
-				},
-				"required": [
-					"username",
-					"name",
-					"iat",
-					"exp"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -336,6 +449,94 @@
 					"Writer"
 				],
 				"security": [],
+				"parameters": []
+			}
+		},
+		"/user-purchase": {
+			"post": {
+				"operationId": "PurchaseBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserPurchaseBookResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Purchase"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserPurchaseBookParams"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/point": {
+			"get": {
+				"operationId": "GetPoints",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetUserPointsResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Point"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/point/latest": {
+			"get": {
+				"operationId": "GetLatestPoint",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetLatestPointResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Point"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
 				"parameters": []
 			}
 		},
@@ -576,11 +777,16 @@
 														},
 														"username": {
 															"type": "string"
+														},
+														"id": {
+															"type": "number",
+															"format": "double"
 														}
 													},
 													"required": [
 														"name",
-														"username"
+														"username",
+														"id"
 													],
 													"type": "object"
 												},
